syntax = "proto3";
option java_package = "eu.tsystems.mms.tic.testframework.report.model";
option java_multiple_files = true;

import "framework.proto";

package data;

message ClassContextAggregate {
    ClassContext class_context = 1;
    repeated MethodContext method_contexts = 2;
}

message ExecutionAggregate {
    ExecutionContext execution_context = 1;
    repeated SuiteContext suite_contexts = 2;
    repeated TestContext test_contexts = 3;
}
